# Shape_Analysis

./: .gitignore  CMakeLists.txt  README.md
Dependencies/CSV_Reader/: CMakeLists.txt
Src/: CMakeLists.txt  Descriptors.cpp  Descriptors.h  FMoptimizer.cpp  FMoptimizer.h  FunctionalMapEnergyEvaluator.cpp  FunctionalMapEnergyEvaluator.h  FunctionalMapping.cpp  FunctionalMapping.h  MeshProcessor.cpp  MeshProcessor.h  Utils.cpp  Utils.h  main.cpp  ptr.h
Src/Map_Refinement/: ICP.cpp  ICP.h  ZoomOut.cpp  ZoomOut.h  ptrMapRefinement.h
data/spectrum/cat/: cat_evals.csv
data/spectrum/lion/: lion_evals.csv
